@@ -1,3 +1,5 @@
+    - Added SimulateCursors trait for Identi.ca compatibility
+
 3.11008 2010-03-02
     - Added support for new api methods: reverse_geocode, geo_id
     - Updated method "update" with new parameters: place_id, display_coordinates
